# ros_haptics

./: README.md
chaifork3/: CHAI3DConfig.cmake.in  CHAI3DConfigVersion.cmake.in  CMakeLists.txt  manifest.xml  ubuntudep.sh
chaifork3/CMake/: Find3DS.cmake  FindOpenHaptics.cmake  FindUSB1.cmake
chaifork3/examples/: CMakeLists.txt
chaifork3/examples/GLUT/: CMakeLists.txt
chaifork3/examples/GLUT/02-multi-devices/: 02-multi-devices.cpp
chaifork3/internal/: CMakeLists.txt
chaifork3/internal/giflib/: CMakeLists.txt
chaifork3/internal/lib3ds/: CMakeLists.txt
chaifork3/internal/libjpeg/: CMakeLists.txt
chaifork3/internal/libpng/: CMakeLists.txt
chaifork3/modules/ODE/: Makefile.common
chaifork3/modules/ODE/examples/GLUT/40-ODE-cube/: 40-ODE-cubic.cpp
chaifork3/modules/ODE/examples/GLUT/42-ODE-mesh/: 42-ODE-mesh.cpp
chaifork3/modules/ODE/examples/GLUT/43-ODE-tool/: 43-ODE-tool.cpp
chaifork3/modules/ODE/src/: CODEGenericBody.cpp
chaifork3/src/: CMakeLists.txt
chaifork3/src/devices/: CGenericHapticDevice.h  CHapticDeviceHandler.cpp  CHapticDeviceHandler.h  CHydraDevice.cpp  CHydraDevice.h  CMyCustomDevice.cpp  CMyCustomDevice.h  CPhantomDevices.cpp  CRemoteDevice.cpp  CRemoteDevice.h  CWoodenDevice.cpp  CWoodenDevice.h  s626comm.h  s626da.h  woodendevice.cpp  woodendevice.h
chaifork3/src/devices/s626/: s626comm.cpp  s626da.cpp  s626encoder.cpp  s626encoder.h
chaifork3/src/display/: CCamera.cpp  CCamera.h
chaifork3/src/math/: CMatrix3d.h  CVector3d.h
chaifork3/src/world/: CShapeSphere.cpp  CShapeSphere.h
haptic_display_tools/: manifest.xml
haptic_display_tools/include/haptic_display_tools/Common/: PointSampler.h
haptic_display_tools/src/Haptics/: PointShellIsosurface.cpp
haptic_gripper_pose_action/cfg/: Haptics.cfg
haptic_gripper_pose_action/launch/: haptics.launch
haptic_gripper_pose_action/src/: MyHapticsWidget.cpp  MyHapticsWidget.h  ghosted_gripper_action_server.cpp  ghosted_gripper_action_server.h  main.cpp  marker_helpers.cpp  test_haptic_ghosted_gripper.cpp
hviz/: 51-kinect.rules  52-falcon.rules  manifest.xml
hviz/cfg/: Haptics.cfg
hviz/config/: haptics.rviz
hviz/launch/: demo.launch  haptics.launch  kinect_filters.launch  kinect_with_tf.launch  rviz.launch
hviz/scripts/: reset_usb
hviz/src/: PointCloudObject.cpp  PointCloudObject.h  PointCloudObject_shapes.cpp  helpers.cpp  helpers.h  main.cpp
