#-----------------------------------------------------------------------------
# CMakeLists file for building the CHAI3D examples.
#
# Created by Sonny Chan
#	March 2009, Stanford University
#       Updated August 2012
#-----------------------------------------------------------------------------

# Recurse into the directory GLUT-based examples.
add_subdirectory(GLUT)

